# VoLN-UAV

./: .gitignore  README.md  pyproject.toml  requirement.txt
airsim_plugin/: AirVoLNSimulatorServerTool.py  README.md
configs/: benchmark_library_update.yaml  benchmark_toy.yaml  dagger_library_update.yaml  dagger_toy.yaml  eval_library_update.yaml  eval_toy.yaml  train_adapter_library_update.yaml  train_adapter_toy.yaml  train_planner_library_update.yaml  train_planner_toy.yaml
docs/: index.html
examples/: annotate_visual_beacons.py  generate_toy_source.py  replay_fix_trajectory.py  replay_fix_trajectory_easy.py  replay_fix_trajectory_hard.py  replay_fix_trajectory_normal.py
scripts/: build_benchmark.sh  dagger_toy.sh  eval_offline.sh  run_adapter.sh  smoke_test.sh  train_adapter.sh  train_planner.sh
src/voln_uav/: __init__.py
src/voln_uav/baselines/: random_policy.py
src/voln_uav/benchmark/: beacon_augmentation.py  builder.py  schema.py  splitter.py  trajectory.py  visual_goal.py
src/voln_uav/cli/: build_benchmark.py  eval_offline.py  run_dagger.py  train_adapter.py  train_planner.py
src/voln_uav/common/: config.py  geometry.py  image.py  io.py  seed.py
src/voln_uav/data/: collate.py  episode_dataset.py
src/voln_uav/evaluation/: closed_loop.py  metrics.py
src/voln_uav/models/: adapter.py  encoders.py  lora.py  planner.py  policy.py  semantic_bank.py
src/voln_uav/simulators/: offline_env.py
src/voln_uav/training/: adapter_trainer.py  (+3 more)
tests/: test_beacon_augmentation.py  test_encoders.py  test_lora.py  test_metrics.py  test_semantic_taxonomy.py
